F4-1 Allocation-free indexed probe
Performance optimization getting index properties

Add tests for ValueUtils#getIndexedPropertyLength to improve coverage and guard against performance issues